--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "dependencies": {
     "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
     "handlebars": "^4.7.8",
     "sequelize": "^6.35.2"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.1"
   }
 }
