--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DB_HOST_URL="localhost"
 DB_USER="root"
-DB_DATABASE_NAME=""
+DB_DATABASE_NAME="student_link_db"
 SESSION_SECRET= "some special key"
