--- a/package.json
+++ b/package.json
@@ -1,12 +1,25 @@
 {
   "dependencies": {
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
     "handlebars": "^4.7.8",
+    "mysql2": "^3.9.1",
+    "nodemon": "^3.0.3",
     "sequelize": "^6.35.2"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.1"
-  }
+  },
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "name": "student-link",
+  "description": "",
+  "version": "1.0.0",
+  "main": "server.js",
+  "author": "",
+  "license": "ISC"
 }
