--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "b": "^2.0.1",
     "bcrypt": "^5.1.1",
+    "crypt": "^0.0.2",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
